--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -6,13 +6,40 @@
     --colorAccent: #ff9e00;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #121212;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #424242;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
 *, *::before, *::after {
     margin: 0; padding: 0; box-sizing: border-box;
-    color: #fff;
+    color: #e8e6e3;
+}
+
+a, a:focus, a::after {
+    text-decoration: none;
+    color: #e8e6e3;
 }
 
 body {
     height: 100vh;
+    scrollbar-width: thin;
+    scrollbar-color: #CFD8DC #90A4AE;
 }
 
 spacer {
@@ -64,6 +91,15 @@ comments {
 
 }
 
+appbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    background: #1b1d21;
+}
+
 scaffold {
     display: block;
     width: 100%;
@@ -80,7 +116,7 @@ iframe {
 
 
 
-red { color: #f00; }
+red { color: rgb( 179, 0, 0 ); }
 green { color: #0f0; }
 blue { color: #00f; }
 branco { color: # }
@@ -88,13 +124,26 @@ preto { color: #000; }
 
 header {
     width: 100%;
-    /* height: 1024px; */
     height: 100%;
     display: flex;
     background-image: url(../imgs/kbox1001.jpg);
+    background-color: rgba(0, 0, 0, 0.2);
+    background-blend-mode: darken;
     background-position: center;
     background-size: cover;
-    /* background-clip: border-box; */
+}
+
+hdln0 {
+    font-family: "Quantico", Sans-serif;
+    font-size: clamp( 22px, 3vw, 48px );
+    width: 90%;
+    font-weight: 600;
+    line-height: 0.9em;
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    font-style: normal;
+    text-align: center;
+    margin: 1ch 0;
 }
 
 hdln {
@@ -125,7 +174,36 @@ hdln-sub {
     font-weight: 400;
 }
 
+.compra {
+    width: clamp( 242.5px, 35%, 250.8px );
+}
 
+.logo-final {
+    width: 183px;
+    margin: 4ch 0;
+}
+
+rodape {
+    background: #000;
+    display: flex;
+}
+
+.rodape-logo {
+    width: 72px;
+}
+
+txt {
+    width: 90%;
+    font-size: 12px;
+    color: #ffffff99;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+f-txt {
+    font-size: 16px;
+    color: #e8e6e390;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 
 
@@ -219,7 +297,6 @@ btn {
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
     margin: 0;
-    border: 0;
     font: inherit;
     vertical-align: baseline;
     color: #2e82bc;
@@ -229,19 +306,17 @@ btn {
     position: relative!important;
     display: inline-block!important;
     border-style: solid;
-    width: 100%;
+    width: clamp( 264.60px, 60%, 425px );
     padding-left: 0!important;
     padding-right: 0!important;
     margin-bottom: 10px;
     padding: 22px 44px;
     border-color: #ff5535;
-    border-width: 0;
-    /* border-radius: 6px; */
-    border-radius: 18px;
-    background: linear-gradient(to bottom,#ff6600 0%,#ff5535 100%);
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 50%);
     text-decoration: none!important;
-    
+    background: transparent;
+    border: rgb( 179, 0, 0 ) 3px solid;
+    border-radius: 5rem;
 }
 
 btn-t {
@@ -250,18 +325,16 @@ btn-t {
     margin: 0;
     border: 0;
     font: inherit;
-    /* vertical-align: baseline; */
     display: block;
     position: relative;
     z-index: 1;
     padding: 0 15px;
     white-space: normal;
-    font-size: 25px;
-    color: #fff;
-    /* font-family: Oswald; */
+    font-size: 22px;
+    font-size: 1.63vw;
+    font-size: clamp( 14px, 1.63vw, 22px );
     font-family: Roboto, Sans-serif;
-    font-weight: 700;
-    text-shadow: #000 0 1px 0;
+    font-weight: 400;
     text-decoration: none;
     width: 100%;
     transition: .05s ease-out;
@@ -280,7 +353,6 @@ btn-t2 {
     margin: 0.2em 0 -0.5em;
     font-size: 15px;
     color: #f5e051;
-    /* font-family: Cabin; */
     font-weight: 700;
     font-style: italic;
     text-shadow: #000 0 1px 0;
@@ -288,7 +360,26 @@ btn-t2 {
 
 btn {
     background: transparent;
-    border: #f00 3px solid;
+    border: rgb( 179, 0, 0 ) 3px solid;
     border-radius: 5rem;
-    width: 60%;
+}
+
+btn:hover {
+    background-image: 
+        linear-gradient(
+            rgb(185, 0, 82) 0%, 
+            rgb(199, 0, 0) 100%
+            );
+}
+
+btn:focus {
+    background-image: 
+        linear-gradient(
+            rgb(185, 0, 82) 0%, 
+            rgb(199, 0, 0) 100%
+            );
+}
+
+btn:focus-visible {
+    border-color: #e8e6e3;
 }
