--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -44,12 +44,11 @@ body {
 
 spacer {
     display: block;
-    margin: 1ch;
+    width: 100%;
+    height: 5px;
 }
-spacer::before{
-    content: "\a";
-    white-space: pre;
-}
+.sp2 { height: 10px; }
+.sp8 { height: 40px; }
 
 flex {
     display: flex;
@@ -121,6 +120,7 @@ green { color: #0f0; }
 blue { color: #00f; }
 branco { color: # }
 preto { color: #000; }
+gold { color: gold; }
 
 header {
     width: 100%;
@@ -174,6 +174,13 @@ hdln-sub {
     font-weight: 400;
 }
 
+.seta {
+    position: absolute;
+    transform: translate(110px, -10px);
+    z-index: 100;
+    width: 50px;
+}
+
 .compra {
     width: clamp( 242.5px, 35%, 250.8px );
 }
@@ -195,6 +202,14 @@ rodape {
 txt {
     width: 90%;
     font-size: 12px;
+    color: #ffffff99;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+t16 {
+    width: 90%;
+    font-size: 16px;
     color: #ffffff99;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
